# retreat-cart

./: Dockerfile  Makefile  core.py  deploy.sh  dev-requirements.txt  main.py  product.py  product_request.sh  pyproject.toml  request_login.sh  requirements.txt  sample.json
api/: Dockerfile  Makefile  README.md  deploy.sh  dev-requirements.txt  pyproject.toml  requirements.txt
api/clients/paknsave/: models.py
api/clients/retreat/: client.py
api/clients/woolworths/: client.py
api/models/: category.py  grocery.py  product.py
api/tests/clients/paknsave/: test_models.py
clients/: clubplus.py
clients/paknsave/: client.py  models.py
clients/retreat/: client.py  models.py
clients/woolworths/: client.py  models.py
models/: grocery.py  product.py
repos/paknsave/: client.py  models.py
repos/retreat/: client.py  models.py
repos/woolworths/: client.py  models.py
services/: conversion.py  grocery.py  shoppinglist.py
tests/: test_shoppinglist.py
tests/clients/paknsave/: test_models.py
tests/models/: test_product.py
