[project]
name = "retreat-cart"
version = "0.5.0"
description = "RetreatManager Shopping list to Grocery Cart conversion."

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "authlib>=1.7.2",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "nltk>=3.9.4",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
